--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "babel": "^6.23.0",
-    "express": "^4.15.2",
+    "jquery": "^3.2.1",
+    "lodash": "^4.17.4",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
     "react-scripts": "0.9.5"
   },
   "scripts": {
